# vita-baremetal-loader

./: Makefile  README.md  baremetal-loader.yml  baremetal.yml  config.h  main.c  resume.S
loader/: CMakeLists.txt  main.c
payload/: lowio.c  lowio.h  main.c  start.s  uart.c
stage1/: stage1.s
